# auralis-pulse

./: .gitignore  IDEAS.md  LICENSE  README.draft.md  README.md  README.old.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
docs/: LESSONS.md  README-ASSETS.md
hooks/: permission-forward.js
mock/: README.md  cover.css  cover.html  cover.js  index.html  mock.css  mock.js
scripts/: make_latest_json.py  mcp_smoke.py
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  compact.rs  context.rs  credentials.rs  main.rs  mcp.rs  notifications.rs  pulse_log.rs  server.rs  sessions.rs  settings_store.rs  user_data_store.rs
