[package]
name = "auralis-pulse"
version = "1.4.0-dev3"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
sysinfo = "0.33"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# MCP server: streamable HTTP transport mounted on existing axum router.
# default includes macros + server (which pulls schemars).
rmcp = { version = "1.7", features = ["transport-streamable-http-server"] }
schemars = "0.8"
rand = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["auth"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
] }
